# LlamaCagUI

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRD.md
llamacag_ui/: __init__.py  __main__.py  api_client.py  config.py  models_catalog.py  stack.py  workers.py
llamacag_ui/ui/: __init__.py  chat_tab.py  documents_tab.py  errors.py  main_window.py  settings_tab.py  stack_tab.py  theme.py  toast.py  welcome_dialog.py
scripts/: make_screenshots.py
tests/: conftest.py  test_api_client.py  test_config.py  test_models_catalog.py  test_stack.py  test_ui_smoke.py
