[project]
name = "llamacag-ui"
version = "2.0.0"
description = "PySide6 desktop client for the llama-cag-n8n cache-augmented document Q&A stack"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.6",
]

[project.scripts]
llamacag-ui = "llamacag_ui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llamacag_ui*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
